最新版 11-4  21点28分

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
         "pages/indexAddTip/index",
         "pages/indexAddNotes/index",
         "pages/indexVolunteerList/index",
+        "pages/indexVolunteerListDetail/index",
         "pages/indexService/index",
         "pages/indexUser/index",
         "pages/indexMyVolunteer/index",
@@ -18,6 +19,7 @@
         "pages/indexUserMake/index",
         "pages/indexNews/index",
         "pages/indexVolunteerManage/index",
+        "pages/indexVolunteerManageDetail/index",
         "pages/indexMyActiveManage/index",
         "pages/indexMyActiveUserList/index",
         "pages/indexMakeManage/index",
