--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     "window": {
         "backgroundTextStyle": "#fff",
         "navigationBarBackgroundColor": "#26a0f5",
-        "navigationBarTitleText": "志愿者服务平台",
+        "navigationBarTitleText": "滨湖社区志愿服务互助平台",
         "navigationBarTextStyle": "#fff"
     }
 }
